--- a/templates/classrooms.html
+++ b/templates/classrooms.html
@@ -1,8 +1,25 @@
-{% extends "classrooms_div.html" %} {% block title %}{{username}}'s Classrooms{% endblock
-%} {% block header %} {{username}}'s classrooms {% endblock %} {% block footer %}
-<div align="center">
-  <a href="/home"
-    ><button type="button" class="btn btn-primary btn-lg">Back</button></a
-  >
-</div>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href={{url_for('static',filename='classrooms.css')}}>
+  <title>Classroom html</title>
+</head>
+<body>
+
+  {% extends "classrooms_div.html" %} {% block title %}{{username}}'s Classrooms {% endblock
+    %} {% block header %} {{username}}'s classrooms {% endblock %} {% block footer %}
+    <div class="center">
+      <a href="/home"
+        ><button type="button" class="btn btn-primary btn-lg">Back</button></a
+      >
+    </div>
+    {% endblock %}
+  
+</body>
+</html>
+
+
+
