--- a/templates/create_classroom.html
+++ b/templates/create_classroom.html
@@ -1,18 +1,35 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-%}
-<h1 align="center">Make a classroom</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href={{url_for('static',filename='createclassroom.css')}}>
+  <title>Create classroom comm.html</title>
+</head>
+<body>
 
-<form method="POST">
-  <textarea name="text" id="text" class="form-control"></textarea>
-  <br />
-  <div align="center">
-    <button type="submit" class="btn btn-lg btn-primary">Create</button>
-  </div>
-</form>
-<br />
-<div align="center">
-  <a href="/home"
-    ><button type="button" class="btn btn-lg btn-secondary">Back</button></a
-  >
-</div>
-{% endblock %}
+  {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
+    %}
+    <h1 class = "h1">Please Make a Classroom Comment</h1>
+    
+    <form method="POST">
+      <textarea name="text" id="text" class="form-control"></textarea>
+      <br />
+      <div class = "BSub">
+        <button type="submit" class="btn btn-lg btn-primary">Create Classroom Comment</button>
+      </div>
+    </form>
+    <br />
+    <div class = "Bbutton" >
+      <a href="/home"
+        ><button type="button" class="btn btn-lg btn-secondary">Back</button></a
+      >
+    </div>
+    {% endblock %}
+    
+  
+</body>
+</html>
+
+
