--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,30 @@
+<!--Layout for homt.html -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href={{url_for('static',filename='home.css')}}>
     <title>Home Page</title>
 </head>
+
+<header>{% extends "classrooms_div.html" %} {% block title %}Home{% endblock %}</header>
+
 <body>
     
+    
+
+
+  
+
+
+    
+
+
+ 
 </body>
 </html>
 
@@ -17,4 +33,4 @@
 
 
 
-{% extends "classrooms_div.html" %} {% block title %}Home{% endblock %}
+
