--- a/templates/login.html
+++ b/templates/login.html
@@ -1,42 +1,41 @@
-{% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
-%}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href={{url_for('static',filename='login.css')}}>
-  <title>Login Page</title>
-</head>
-<body>
+{% extends "base.html" %} {% block title %}Login{% endblock %} {% block content%}
   
-</body>
-</html>
-<form method="POST">
-  <h3 align="center">Login</h3>
-  <div class="form-group">
-    <label for="email">Email Address</label>
-    <input
-      type="text"
-      id="email"
-      name="email"
-      class="form-control"
-      placeholder="Enter Email"
-    />
-    <label for="password">Password</label>
-    <input
-      type="password"
-      id="password"
-      name="password"
-      class="form-control"
-      placeholder="Enter Password"
-    />
-    <br />
-    <div align="center">
-      <button class="btn btn-primary" type="submit">Login</button>
-    </div>
-  </div>
-</form>
-{% endblock %}
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href={{url_for('static',filename='login.css')}}>
+    <title>Login Page</title>
+  </head>
+  <body>
+    <form method="POST">
+      <h3 align="center">Login</h3>
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input
+          type="text"
+          id="email"
+          name="email"
+          class="form-control"
+          placeholder="Enter Email"
+        />
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          class="form-control"
+          placeholder="Enter Password"
+        />
+        <br />
+        <div align="center">
+          <button class="btn btn-primary" type="submit">Login</button>
+        </div>
+      </div>
+    </form>
+    {% endblock %}
+    
+  </body>
+  </html>
