--- a/templates/signup.html
+++ b/templates/signup.html
@@ -16,11 +16,11 @@ content %}
 </body>
 </html>
 <form method="POST">
-  <h3 align="center">Sign Up</h3>
+  <h3 class="h3">Sign Up</h3>
   <div class="form-group">
     <label for="email">Email Address</label>
     <input
-      type="text"
+      type="email"
       id="email"
       name="email"
       class="form-control"
@@ -51,7 +51,7 @@ content %}
       placeholder="Enter Password Again"
     />
     <br />
-    <div align="center">
+    <div class="submit-button">
       <button class="btn btn-primary" type="submit">Sign Up</button>
     </div>
   </div>
