--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
-<!--Layout for homt.html -->
+<!--This code is created by Zilong Wu on the 01/08/2022 -->
+<!--This is the code for home.html-->
 
 
 <!DOCTYPE html>
