--- a/templates/classrooms_div.html
+++ b/templates/classrooms_div.html
@@ -1,3 +1,6 @@
+<!--This code is created by Zilong Wu on the 01/08/2022 -->
+<!--This is the code for classrooms_div.html-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
