--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,5 @@
+<!--This code is created by Zilong Wu on the 01/08/2022 -->
+<!--This is the code for login.html-->
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content%}
   
   <!DOCTYPE html>
@@ -10,32 +12,37 @@
     <title>Login Page</title>
   </head>
   <body>
-    <form method="POST">
-      <h3 align="center">Login</h3>
-      <div class="form-group">
-        <label for="email">Email Address</label>
-        <input
-          type="text"
-          id="email"
-          name="email"
-          class="form-control"
-          placeholder="Enter Email"
-        />
-        <label for="password">Password</label>
-        <input
-          type="password"
-          id="password"
-          name="password"
-          class="form-control"
-          placeholder="Enter Password"
-        />
-        <br />
-        <div align="center">
-          <button class="btn btn-primary" type="submit">Login</button>
+
+
+    <div class = "everything ">
+      <form method="POST">
+        <h3 class="h3">Login</h3>
+        <div class="form-group">
+          <label for="email">Email Address</label>
+          <input
+            type="text"
+            id="email"
+            name="email"
+            class="form-control"
+            placeholder="Enter Email"
+          />
+          <br>
+          <label for="password">Password</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            class="form-control"
+            placeholder="Enter Password"
+          />
+          <br />
+          <div class="submit">
+            <button class="btn btn-primary" type="submit">Login</button>
+          </div>
         </div>
-      </div>
-    </form>
-    {% endblock %}
-    
+      </form>
+      {% endblock %}
+    </div>  
+
   </body>
   </html>
