--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,3 +1,7 @@
+<!--This code is created by Zilong Wu on the 01/08/2022 -->
+<!--This is the code for signup.html-->
+
+
 {% extends "base.html" %} {% block title %}Sign Up{% endblock %} {% block
 content %}
 
