--- a/static/login.css
+++ b/static/login.css
@@ -1,8 +1,35 @@
+/*Style for login.html*/
+
+
+*
+{
+    margin: 0;
+    padding:0;
+    box-sizing:border-box;
+    font-family: "Times New Roman", Times, serif;
+}
+
+
 body{
+
     min-height: 100%;
     overflow-x:hidden;
     background: #355C7D;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #C06C84, #6C5B7B, #355C7D);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #C06C84, #6C5B7B, #355C7D); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.everything{
+    transform:translateY(150px);  
+}
+
+.h3{
+    text-align: center;
+}
+
+.form-group{
+    text-align: center;
+
+    
 }
 
