--- a/templates/login.html
+++ b/templates/login.html
@@ -13,10 +13,9 @@
   </head>
   <body>
 
-
-    <div class = "everything ">
       <form method="POST">
-        <h3 class="h3">Login</h3>
+        <h1 class="h1">Login to See Classroom Comments</h1>
+        <br>
         <div class="form-group">
           <label for="email">Email Address</label>
           <input
