--- a/static/signup.css
+++ b/static/signup.css
@@ -13,3 +13,16 @@ body{
     background: linear-gradient(to right, #86fde8, #acb6e5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
+
+.h3{
+    text-align: center;
+    transform:translateY(50px);  
+
+}
+
+.form-group{
+    text-align: center;
+    transform:translateY(100px);  
+
+}
+
