--- a/templates/create_classroom.html
+++ b/templates/create_classroom.html
@@ -13,10 +13,12 @@
 </head>
 <body>
 
+  {# extends to the base html#}
   {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
     %}
     <h1 class = "h1">Please Make a Classroom Comment</h1>
     
+    <!--This is the form method for creating a classroom comment-->
     <form method="POST">
       <textarea name="text" id="text" class="form-control"></textarea>
       <br />
