--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,8 @@
     <title>Home Page</title>
 </head>
 
-<header>{% extends "classrooms_div.html" %} {% block title %}Home{% endblock %}</header>
+{# This extends to the classrooms_div.html #}
+<header class = "header">{% extends "classrooms_div.html" %} {% block title %}Home{% endblock %}</header>
 
 <body>
     
