--- a/templates/signup.html
+++ b/templates/signup.html
@@ -17,6 +17,7 @@ content %}
 </head>
   <body>
 
+      <!--Form submissions where users are able to enter the required imputs links to routes-->
       <form method="POST">
         <h3 class="h3">Sign Up</h3>
         <div class="form-group">
