--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,7 @@
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="/home">Home</a>
+            {# This is where if user is authenticated #}
             {% if user.is_authenticated %}
             <a class="nav-item nav-link" href="/logout">Logout</a>
             {% else %}
@@ -45,6 +46,8 @@
         </div>
       </div>
     </nav>
+
+    {# This right here will show error messages #}
     {% with messages = get_flashed_messages(with_categories=true) %} {% if
     messages %} {% for category, message in messages %} {% if category ==
     'error' %}
