--- a/templates/classrooms.html
+++ b/templates/classrooms.html
@@ -13,8 +13,9 @@
 </head>
 <body>
 
+  {# This extends to the classrooms_div.html #}
   {% extends "classrooms_div.html" %} {% block title %}{{username}}'s Classrooms {% endblock
-    %} {% block header %} {{username}}'s classrooms {% endblock %} {% block footer %}
+    %} {% block header %} {{username}}'s classrooms comments{% endblock %} {% block footer %}
     <div class="center">
       <a href="/home"
         ><button type="button" class="btn btn-primary btn-lg">Back</button></a
