--- a/templates/classrooms_div.html
+++ b/templates/classrooms_div.html
@@ -11,8 +11,9 @@
 </head>
 <body>
 
-  {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-    %}
+
+  {# This extend sto the base.html #}
+  {% extends "base.html" %} {% block title %}Home{% endblock %} {% block content %}
     
     
     
@@ -24,6 +25,7 @@
         <div class="card-header d-flex justify-content-between align-items-center">
           <a href="/classrooms/{{classroom.user.username}}">{{classroom.user.username}}</a>
           <div>
+            {# CLicking the like button increases the number beside the likes #}
             <span id="likes-count-{{classroom.id}}">
             {{ classroom.likes|length }}</span> 
             {% if user.id in classroom.likes|map(attribute="end_user")|list %}
@@ -71,6 +73,8 @@
                   </div>
                   <div>
                     <small class="text-muted"> {{comment.date_created}}</small>
+                    
+                    {# That a user are able to delete the comment of only their own #}
                     {% if user.id == comment.end_user or user.id == classroom.end_user %}
                     <div class="btn-group">
                       <button
@@ -109,6 +113,8 @@
             method="POST"
             action="/create-comment/{{classroom.id}}"
           >
+
+          <!--This is the input box where other user can enter the comment-->
             <input
               type="text"
               id="text"
