--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="/static/images/CO2.ico">
+    <link rel="stylesheet" href={{url_for('static',filename='base.css')}}>
+    
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,6 +23,7 @@
     ></script>
     <title>{% block title %}{% endblock %}</title>
   </head>
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
@@ -71,6 +74,8 @@
       type="text/javascript"
       src="{{ url_for('static', filename='index.js')}}"
     ></script>
- 
   </body>
+
+  <footer class = "footer"> <small>&copy; Copyright 2022, Classroom Comments, Zilong Wu</small> </footer> 
+  
 </html>
