--- a/static/classrooms.css
+++ b/static/classrooms.css
@@ -5,3 +5,9 @@
     box-sizing:border-box;
     font-family:'poppins', sans-serif;
 }
+
+body{
+    background: #5433ff; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #5433ff, #20bdff, #a5fecb); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #a5fecb, #20bdff, #5433ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
