--- a/13 DTP Assignment/website/templates/base.html
+++ b/13 DTP Assignment/website/templates/base.html
@@ -1,5 +1,5 @@
 <!--This code is created by Zilong Wu on the 01/08/2022 -->
-<!--This is the code for base.html-->
+<!--This is the code for base.html where pretty much other templates are connected to-->
 
 
 <!DOCTYPE html>
