--- a/13 DTP Assignment/website/templates/404.html
+++ b/13 DTP Assignment/website/templates/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Outfit&display=swap" rel="stylesheet">
+
     <title>error | easy.e</title>
 </head> 
 
@@ -12,6 +12,10 @@
         <h1 class="error_404">404</h1>
         <h1 class="error_text">page not found</h1>
         <p class="error_smalltext">sorry, but the requested page is not found.</p>
-        <p class="error_smalltext">back to <a href="{{url_for('home')}}"><b>home</b></a></p> 
+        <div class="center">
+            <a href="/home"
+              ><button type="button" class="btn btn-primary btn-lg">Back</button></a
+            >
+          </div>
     </div>
 </div>
